--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.jorgeprieto.Ui.PantallaSplash"
+        <activity android:name="com.jorgeprieto.Ui.RegisterActivity">
+        </activity>
+        <activity android:name="com.jorgeprieto.Ui.LoginActivity">
+        </activity>
+        <activity
+                android:name="com.jorgeprieto.Ui.PantallaSplash"
                 android:label="SplashScreen"
                 android:theme="@style/Theme.splash">
             <intent-filter>
@@ -18,11 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".MainActivity"
-                  android:label="MainACtivity"
-                  android:theme="@style/AppTheme">
-
+        <activity
+                android:name=".MainActivity"
+                android:label="MainACtivity"
+                android:theme="@style/AppTheme">
         </activity>
     </application>
 
