--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.jorgeprieto.Ui.RegisterActivity">
-        </activity>
-        <activity android:name="com.jorgeprieto.Ui.LoginActivity">
-        </activity>
+
         <activity
                 android:name="com.jorgeprieto.Ui.PantallaSplash"
-                android:label="SplashScreen"
+                android:label="@string/app_name"
                 android:theme="@style/Theme.splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -24,9 +21,14 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".MainActivity"
-                android:label="MainACtivity"
-                android:theme="@style/AppTheme">
+                android:name="com.jorgeprieto.Ui.LoginActivity"
+                android:label="LoginActivity"
+                android:theme="@style/Theme.splash">
+        </activity>
+
+        <activity android:name="com.jorgeprieto.Ui.RegisterActivity"
+                  android:label="RegisterActivity"
+                  android:theme="@style/Theme.splash">
         </activity>
     </application>
 
