--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.jorgeprieto.museosjorgeprieto">
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
             android:allowBackup="true"
@@ -28,6 +30,11 @@
 
         <activity android:name="com.jorgeprieto.Ui.RegisterActivity"
                   android:label="RegisterActivity"
+                  android:theme="@style/Theme.splash">
+        </activity>
+
+        <activity android:name="com.jorgeprieto.Ui.MainActivity"
+                  android:label="Login"
                   android:theme="@style/Theme.splash">
         </activity>
     </application>
