--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/imagesmusseumlogo"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/imagesmusseumlogo_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <meta-data
@@ -23,7 +23,7 @@
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-                android:name="com.jorgeprieto.ui.PantallaSplash"
+                android:name="com.jorgeprieto.ui.Splash.PantallaSplash"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.splash">
             <intent-filter>
@@ -33,18 +33,13 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.jorgeprieto.ui.LoginActivity"
+                android:name="com.jorgeprieto.ui.LoginActicities.LoginActivity"
                 android:label="LoginActivity"
                 android:theme="@style/Theme.splash">
         </activity>
         <activity
-                android:name="com.jorgeprieto.ui.RegisterActivity"
+                android:name="com.jorgeprieto.ui.LoginActicities.RegisterActivity"
                 android:label="RegisterActivity"
-                android:theme="@style/Theme.splash">
-        </activity>
-        <activity
-                android:name="com.jorgeprieto.ui.MainActivity"
-                android:label="Login"
                 android:theme="@style/Theme.splash">
         </activity>
     </application>
