--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     implementation 'com.google.firebase:firebase-firestore:23.0.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation('com.journeyapps:zxing-android-embedded:4.2.0')
     testImplementation 'junit:junit:4.12'
